# emotion_classifier

./: .gitignore  LICENSE  README.md  config.py  config.yaml  helpers.py  pyproject.toml  report.md  requirements.txt  train.py
data/: preprocess.py
emotion_classifier/: eval.py  helpers.py
emotion_classifier/cli/: eval.py  predict.py  train.py  tune_threshold.py
emotion_classifier/data/: preprocess.py
emotion_classifier/evaluation/: __init__.py  evaluator.py  threshold_tuner.py
emotion_classifier/inference/: __init__.py  predictor.py
emotion_classifier/models/: factory.py  transformer.py
emotion_classifier/outputs/bilstm-last-token/: thresholds.json
emotion_classifier/outputs/transformer-feature-extract/: config.yaml
emotion_classifier/scripts/: threshold_tuning.py
emotion_classifier/training/: __init__.py
emotion_classifier/utils/: __init__.py  device.py  path.py  text.py
models/: bilstm.py  transformer.py
outputs/bilstm-last-token/2025-11-29_13-08/: config.yaml
outputs/bilstm-last-token/eval/: test_results.json
outputs/bilstm-max-pool/: config.yaml  thresholds.json
outputs/bilstm-max-pool/eval/: confusion_stats.json  test_results.json
outputs/dataset/eval/: num_label_samples.json
outputs/dataset/test/: num_label_samples.json
outputs/dataset/train/: num_label_samples.json
outputs/transformer-feature-extract/2025-11-29_15-22/: config.yaml  thresholds.json
outputs/transformer-feature-extract/2025-12-23_15-50/: thresholds.json
outputs/transformer-feature-extract/2026-01-04_22-06/: config.yaml  thresholds.json
outputs/transformer-feature-extract/eval/: confusion_stats.json  test_results.json
outputs/transformer-fine-tune/: thresholds.json
outputs/transformer-fine-tune/2025-11-29_16-26/: config.yaml
outputs/transformer-fine-tune/2025-12-23_18-12/: config.yaml
outputs/transformer-fine-tune/2026-01-03_20-47/: config.yaml  thresholds.json
outputs/transformer-fine-tune/eval/: confusion_stats.json  test_results.json
scripts/: predict.py
src/emotion_classifier/cli/: dataset_analysis.py  eval.py  predict.py  train.py  tune_threshold.py  visualize.py
src/emotion_classifier/data/: __init__.py  preprocess.py
src/emotion_classifier/evaluation/: __init__.py  dataset_analysis.py  evaluator.py  runner.py
src/emotion_classifier/inference/: predictor.py
src/emotion_classifier/models/: bilstm.py  factory.py  transformer.py
src/emotion_classifier/training/: runner.py  trainer.py
src/emotion_classifier/utils/: __init__.py  (+5 more)
utils/: io.py  metrics.py  text.py
(+14 files in other folders)
